# Crosshair-Overlay

./: README.md  build.bat  dev.bat  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  overlay.rs
src/components/: CrosshairDesigner.tsx  CrosshairPreview.tsx  FavoritesPanel.tsx  components.css
